--- a/my-nft-website/vercel.json/vercel.json
+++ b/my-nft-website/vercel.json/vercel.json
@@ -1,7 +1,8 @@
 {
-  "version": 2,
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/api/(.*)", "dest": "/api/$1" }
-  ]
+  "name": "longnecks-website",
+  "version": "1.0.0",
+  "description": "Longnecks Website with OpenSea API",
+  "dependencies": {
+    "node-fetch": "^2.6.7"
+  }
 }
